--- a/index.html
+++ b/index.html
@@ -33,18 +33,22 @@
     <!-- about me section -->
     <section id="aboutme">
       <h3>About Me</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam cursus lacinia. Maecenas lacinia posuere tellus. Etiam sapien sem, vestibulum vel justo nec, finibus lobortis magna. Vestibulum placerat gravida augue at vulputate. Suspendisse dignissim turpis sed semper dignissim. Sed ultricies turpis in elit scelerisque, eget vulputate magna sagittis. Sed a tempor mi, vitae sagittis arcu. Donec finibus finibus lorem eget viverra. Cras erat metus, consequat eu arcu ut, feugiat sodales sapien.</p>
-      <p>Maecenas nec justo porta, gravida nibh sed, ultrices lectus. Duis iaculis ac purus sed fermentum. Nunc sed sodales nulla, ut tristique nunc. Suspendisse consectetur diam sit amet mi tempor, at hendrerit sapien consequat. Donec fringilla metus aliquet massa pellentesque commodo. Donec a orci nisl. Quisque convallis efficitur sem et rhoncus. Integer et porta magna.</p>
+      <article>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec aliquam cursus lacinia. Maecenas lacinia posuere tellus. Etiam sapien sem, vestibulum vel justo nec, finibus lobortis magna. Vestibulum placerat gravida augue at vulputate. Suspendisse dignissim turpis sed semper dignissim. Sed ultricies turpis in elit scelerisque, eget vulputate magna sagittis. Sed a tempor mi, vitae sagittis arcu. Donec finibus finibus lorem eget viverra. Cras erat metus, consequat eu arcu ut, feugiat sodales sapien.</p>
+        <p>Maecenas nec justo porta, gravida nibh sed, ultrices lectus. Duis iaculis ac purus sed fermentum. Nunc sed sodales nulla, ut tristique nunc. Suspendisse consectetur diam sit amet mi tempor, at hendrerit sapien consequat. Donec fringilla metus aliquet massa pellentesque commodo. Donec a orci nisl. Quisque convallis efficitur sem et rhoncus. Integer et porta magna.</p>
+      </article>
     </section>
 
     <!-- portfolio section -->
     <section id="portfolio"> 
-      <h2></h2>
-      <div class="card">Surf Report</div>
-      <div class="card">LED Wall</div>
-      <div class="card">Calculator</div>
-      <div class="card">Pastel Puzzles</div>
-      <div class="card">Run Buddy</div>
+      <h3>Portfolio</h3>
+      <div>
+        <div class="card featured">Surf Report</div>
+        <div class="card">LED Wall</div>
+        <div class="card">Calculator</div>
+        <div class="card">Pastel Puzzles</div>
+        <div class="card">Run Buddy</div>
+      </div>
     </section>
 
     <!-- contact section -->
