added project 2 to portfolio

--- a/index.html
+++ b/index.html
@@ -63,9 +63,25 @@
                 <h3>Portfolio</h3>
                 <div>
                     <div id="pokewire" class="card featured">
-                        <h4><a href="https://luckysal.github.io/pokewire" target="_blank">PokéWire</a></h4>
+                        <h4>
+                            <a
+                                href="https://luckysal.github.io/pokewire"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                >PokéWire</a
+                            >
+                        </h4>
                     </div>
-                    <div class="card">LED Wall</div>
+                    <div id="mtgpp" class="card">
+                        <h4>
+                            <a
+                                href="https://peaceful-escarpment-11973.herokuapp.com/"
+                                target="_blank"
+                                rel="noopener noreferrer"
+                                >MTG++</a
+                            >
+                        </h4>
+                    </div>
                     <div class="card">Calculator</div>
                     <div class="card">Pastel Puzzles</div>
                     <div class="card">Run Buddy</div>
