--- a/index.html
+++ b/index.html
@@ -1,108 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="./assets/css/reset.css" />
-        <link rel="stylesheet" href="./assets/css/style.css" />
-        <title>Brandon Hill // Web Developer</title>
-    </head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>Brandon Hill // Web Developer</title>
+  </head>
 
-    <body>
-        <!-- logo, navigation bar -->
-        <header>
-            <h1>Brandon Hill</h1>
-            <nav>
-                <!-- links to different sections in the page -->
-                <a href="#aboutme">About Me</a>
-                <a href="#portfolio">Portfolio</a>
-                <a href="#contact">Contact Me</a>
-                <!-- Resume placeholder from ethanvoth.com -->
-                <a href="./assets/files/resume.pdf">Resume</a>
-            </nav>
-        </header>
+  <body>
+    <!-- logo, navigation bar -->
+    <header>
+      <h1>Brandon Hill</h1>
+      <nav>
+        <!-- links to different sections in the page -->
+        <a href="#aboutme">About Me</a>
+        <a href="#portfolio">Portfolio</a>
+        <a href="#contact">Contact Me</a>
+        <!-- Resume placeholder from ethanvoth.com -->
+        <a href="./assets/files/resume.pdf">Resume</a>
+      </nav>
+    </header>
 
-        <!-- subtitle -->
-        <section class="subtitle">
-            <h2>Coding Amateur, Meme Connoisseur</h2>
-        </section>
+    <!-- subtitle -->
+    <section class="subtitle">
+      <h2>Coding Amateur, Meme Connoisseur</h2>
+    </section>
 
-        <main>
-            <!-- about me section -->
-            <section id="aboutme">
-                <h3>About Me</h3>
-                <article>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Donec aliquam cursus lacinia. Maecenas lacinia posuere
-                        tellus. Etiam sapien sem, vestibulum vel justo nec,
-                        finibus lobortis magna. Vestibulum placerat gravida
-                        augue at vulputate. Suspendisse dignissim turpis sed
-                        semper dignissim. Sed ultricies turpis in elit
-                        scelerisque, eget vulputate magna sagittis. Sed a tempor
-                        mi, vitae sagittis arcu. Donec finibus finibus lorem
-                        eget viverra. Cras erat metus, consequat eu arcu ut,
-                        feugiat sodales sapien.
-                    </p>
-                    <p>
-                        Maecenas nec justo porta, gravida nibh sed, ultrices
-                        lectus. Duis iaculis ac purus sed fermentum. Nunc sed
-                        sodales nulla, ut tristique nunc. Suspendisse
-                        consectetur diam sit amet mi tempor, at hendrerit sapien
-                        consequat. Donec fringilla metus aliquet massa
-                        pellentesque commodo. Donec a orci nisl. Quisque
-                        convallis efficitur sem et rhoncus. Integer et porta
-                        magna.
-                    </p>
-                </article>
-            </section>
+    <main>
+      <!-- about me section -->
+      <section id="aboutme">
+        <h3>About Me</h3>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec
+            aliquam cursus lacinia. Maecenas lacinia posuere tellus. Etiam
+            sapien sem, vestibulum vel justo nec, finibus lobortis magna.
+            Vestibulum placerat gravida augue at vulputate. Suspendisse
+            dignissim turpis sed semper dignissim. Sed ultricies turpis in elit
+            scelerisque, eget vulputate magna sagittis. Sed a tempor mi, vitae
+            sagittis arcu. Donec finibus finibus lorem eget viverra. Cras erat
+            metus, consequat eu arcu ut, feugiat sodales sapien.
+          </p>
+          <p>
+            Maecenas nec justo porta, gravida nibh sed, ultrices lectus. Duis
+            iaculis ac purus sed fermentum. Nunc sed sodales nulla, ut tristique
+            nunc. Suspendisse consectetur diam sit amet mi tempor, at hendrerit
+            sapien consequat. Donec fringilla metus aliquet massa pellentesque
+            commodo. Donec a orci nisl. Quisque convallis efficitur sem et
+            rhoncus. Integer et porta magna.
+          </p>
+        </article>
+      </section>
 
-            <!-- portfolio section -->
-            <section id="portfolio">
-                <h3>Portfolio</h3>
-                <div>
-                    <div id="pokewire" class="card featured">
-                        <h4>
-                            <a
-                                href="https://luckysal.github.io/pokewire"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >PokéWire</a
-                            >
-                        </h4>
-                    </div>
-                    <div id="mtgpp" class="card">
-                        <h4>
-                            <a
-                                href="https://peaceful-escarpment-11973.herokuapp.com/"
-                                target="_blank"
-                                rel="noopener noreferrer"
-                                >MTG++</a
-                            >
-                        </h4>
-                    </div>
-                    <div class="card">Calculator</div>
-                    <div class="card">Pastel Puzzles</div>
-                    <div class="card">Run Buddy</div>
-                </div>
-            </section>
+      <!-- portfolio section -->
+      <section id="portfolio">
+        <h3>Portfolio</h3>
+        <div>
+          <div id="pokewire" class="card featured">
+            <h4>
+              <a
+                href="https://luckysal.github.io/pokewire"
+                target="_blank"
+                rel="noopener noreferrer"
+                >PokéWire</a
+              >
+            </h4>
+          </div>
+          <div id="mtgpp" class="card">
+            <h4>
+              <a
+                href="https://peaceful-escarpment-11973.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >MTG++</a
+              >
+            </h4>
+          </div>
+          <div id="outta-touch" class="card">
+            <h4>
+              <a
+                href="https://outta-touch.herokuapp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                >OuttaTouch</a
+              >
+            </h4>
+          </div>
+          <div class="card">Pastel Puzzles</div>
+          <div class="card">Run Buddy</div>
+        </div>
+      </section>
 
-            <!-- contact section -->
-            <section id="contact">
-                <h3>Contact Me</h3>
-                <ul>
-                    <li>555-555-5555</li>
-                    <li>
-                        <a href="mailto:hillbp2014@gmail.com"
-                            >hillbp2014@gmail.com</a
-                        >
-                    </li>
-                    <li><a href="https://github.com/luckysal">GitHub</a></li>
-                    <li><a href="http://niceme.me">Twitter</a></li>
-                    <li><a href="http://niceme.me">Spotify</a></li>
-                </ul>
-            </section>
-        </main>
-    </body>
+      <!-- contact section -->
+      <section id="contact">
+        <h3>Contact Me</h3>
+        <ul>
+          <li>555-555-5555</li>
+          <li>
+            <a href="mailto:hillbp2014@gmail.com">hillbp2014@gmail.com</a>
+          </li>
+          <li><a href="https://github.com/luckysal">GitHub</a></li>
+          <li><a href="http://niceme.me">Twitter</a></li>
+          <li><a href="http://niceme.me">Spotify</a></li>
+        </ul>
+      </section>
+    </main>
+  </body>
 </html>
